[package]
name = "esp-ping-leds"
version = "0.2.0"
authors = ["Shish <shish@shishnet.org>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
name = "esp_ping_leds"
path = "src/lib.rs"

[[bin]]
name = "esp-ping-leds"
path = "src/main.rs"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
required-features = ["esp32"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["esp32"]
esp32 = ["dep:log", "dep:esp-idf-svc", "dep:anyhow", "dep:ws2812-esp32-rmt-driver", "dep:heapless", "dep:embuild", "dep:serde", "dep:serde_json"]
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4", optional = true }
esp-idf-svc = { version = "0.51", features = ["alloc"], optional = true }
anyhow = { version = "1.0", optional = true }
smart-leds = "0.4"
ws2812-esp32-rmt-driver = { version = "0.13", features = ["smart-leds-trait"], optional = true }
heapless = { version = "0.8.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }

[build-dependencies]
embuild = { version = "0.33", optional = true }

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "allow"
